--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,19 +7,28 @@ body{
 	padding:0;
 	margin: 0;
 }
-.navbar {
+.topnav {
   overflow: hidden;
-  background-color: #154254;
-  font-family: josefin-sans;
+  background-color: #1B4F6D;
 }
 
-.navbar a {
+.topnav a {
   float: left;
-  font-size: 16px;
-  color: white;
+  display: block;
+  color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+  font-size: 17px;
+}
+
+.active {
+  background-color: #EAD040;
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
 }
 
 .dropdown {
@@ -28,7 +37,7 @@ body{
 }
 
 .dropdown .dropbtn {
-  font-size: 16px;  
+  font-size: 17px;    
   border: none;
   outline: none;
   color: white;
@@ -36,10 +45,6 @@ body{
   background-color: inherit;
   font-family: inherit;
   margin: 0;
-}
-
-.navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: #C68925;
 }
 
 .dropdown-content {
@@ -60,16 +65,54 @@ body{
   text-align: left;
 }
 
+.topnav a:hover, .dropdown:hover .dropbtn {
+  background-color: #555;
+  color: white;
+}
+
 .dropdown-content a:hover {
   background-color: #ddd;
+  color: black;
 }
 
 .dropdown:hover .dropdown-content {
   display: block;
 }
 
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child), .dropdown .dropbtn {
+    display: none;
+  }
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .topnav.responsive .dropdown {float: none;}
+  .topnav.responsive .dropdown-content {position: relative;}
+  .topnav.responsive .dropdown .dropbtn {
+    display: block;
+    width: 100%;
+    text-align: left;
+  }
+}
+
 img{
 	float: left;
+	background-color: #1B4F6D;
 
 }
 .login{
