--- a/css/style2.css
+++ b/css/style2.css
@@ -4,6 +4,7 @@
 	text-align: justify;
 	margin: 20px;
 	margin-right: 50px;
+	display: inline-block;
 
 }
 .intro_head{
@@ -13,6 +14,7 @@
 }
 .textContainer{
 		height: 15rem;
+		display: inline-block;
 		overflow: auto;
 		overflow: hidden;
 		padding: 20px;
